--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "engines": "^0.4.0",
     "express": "^4.17.1",
     "ibm-watson": "^6.0.4",
     "mongodb": "^3.6.6",
     "request": "^2.88.2"
   },
   "engines": {
-    "node": "12.18.0",
+    "node": "12.x",
     "npm": "7.10.0"
   },
   "description": "basic node",
